# ocaml-epar

./: .gitignore  LICENSE  README.md  dune-project  epar.opam
.github/workflow/: main.yaml
lib/: dune  epar_0_1.ml  prim.ml  stringConversion.ml
test/: dune  eparSpec.ml  gen.ml
test/qtests/: dune  eparSpec.ml  gen.ml
test/testcases/: dune  testcases.ml
test/testcases/malformed-missing-header-metadata-terminator/: archive-0.1.epar
test/testcases/malformed-missing-linebreak-after-header-metadata/: archive-0.1.epar
test/testcases/malformed-missing-linebreak-after-section-metadata/: archive-0.1.epar
test/testcases/malformed-missing-section-metadata-terminator/: archive-0.1.epar
test/testcases/roundtrip-empty-archive/: archive.epar  prepare.sh
test/testcases/roundtrip-line-break-types/: archive-0.1.epar  files.txt
test/testcases/roundtrip-trailing-linebreaks/: archive.epar
