(lang dune 1.11)
(name epar)
(source (github na4zagin3/epar))
(license ISC)
(authors "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>")
(maintainers "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>")

(package
 (name epar)
 (synopsis "OCaml implementation of Extensible Plain-text ARchive (EPAR) format")
 (depends))
